<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/id_toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@color/colorAppbar"
		>

		<TextView
			android:id="@+id/id_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/edit_profile_title"
			android:textColor="@color/white"
			android:textSize="@dimen/common_text_size_20"/>

	</android.support.v7.widget.Toolbar>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:layout_marginTop="40dp"
		android:background="#60999999"/>

	<EditText
		android:id="@+id/id_edit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/common_margin_25"
		android:layout_marginRight="@dimen/common_margin_25"
		android:background="@android:color/transparent"
		android:gravity="center_vertical"
		android:hint="@string/app_name"
		android:textColor="#666666"
		android:textColorHint="#999999"
		android:paddingBottom="@dimen/common_margin_15"
		android:paddingTop="@dimen/common_margin_15"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:background="#60999999"
		/>

	<Button
		android:id="@+id/id_btn_ok"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/common_margin_25"
		android:layout_marginRight="@dimen/common_margin_25"
		android:layout_marginTop="50dp"
		android:background="@drawable/shape_login_btn_bg"
		android:padding="@dimen/common_margin_10"
		android:text="@string/ok"
		android:textColor="@color/colorAppbar"
		android:textSize="@dimen/common_text_size_18"/>

</LinearLayout>